Add ResultGroup3 with interp

--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -1053,6 +1053,7 @@
     <Compile Include="Business\Test\HER2AmplificationSummary\HER2AmplificationResult.cs" />
     <Compile Include="Business\Test\HER2AmplificationSummary\HER2AmplificationResultCollection.cs" />
     <Compile Include="Business\Test\HER2AmplificationSummary\HER2AmplificationResultGroup2.cs" />
+    <Compile Include="Business\Test\HER2AmplificationSummary\HER2AmplificationResultGroup3.cs" />
     <Compile Include="Business\Test\HER2AmplificationSummary\HER2AmplificationResultMatch.cs" />
     <Compile Include="Business\Test\HER2AmplificationSummary\HER2AmplificationSummaryTest.cs" />
     <Compile Include="Business\Test\HER2AmplificationSummary\HER2AmplificationSummaryTestOrder.cs" />
