--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -1050,6 +1050,9 @@
     <Compile Include="Business\Test\EGFRMutationAnalysisPreliminary\EGFRMutationAnalysisPreliminaryTest.cs" />
     <Compile Include="Business\Test\EGFRToALKReflexAnalysis\EGFRToALKReflexAnalysisBRAFResult.cs" />
     <Compile Include="Business\Test\ExtractAndHoldForPreauthorization\ExtractAndHoldForPreauthorizationWordDocument.cs" />
+    <Compile Include="Business\Test\HER2AmplificationRecount\HER2AmplificationRecountTest.cs" />
+    <Compile Include="Business\Test\HER2AmplificationRecount\HER2AmplificationRecountTestOrder.cs" />
+    <Compile Include="Business\Test\HER2AmplificationRecount\HER2AmplificationRecountWordDocument.cs" />
     <Compile Include="Business\Test\HER2AmplificationSummary\HER2AmplificationResult.cs" />
     <Compile Include="Business\Test\HER2AmplificationSummary\HER2AmplificationResultCollection.cs" />
     <Compile Include="Business\Test\HER2AmplificationSummary\HER2AmplificationResultGroup2.cs" />
@@ -3512,6 +3515,10 @@
       <DependentUpon>BRAFMutationAnalysisResultPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="UI\Test\BRAFMutationAnalysisResultPath.cs" />
+    <Compile Include="UI\Test\HER2AmplificationRecountResultPage.xaml.cs">
+      <DependentUpon>HER2AmplificationRecountResultPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Test\HER2AmplificationRecountResultPath.cs" />
     <Compile Include="UI\Test\HER2AmplificationSummaryResultPage.xaml.cs">
       <DependentUpon>HER2AmplificationSummaryResultPage.xaml</DependentUpon>
     </Compile>
@@ -5405,6 +5412,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UI\Test\BRAFMutationAnalysisResultPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UI\Test\HER2AmplificationRecountResultPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
