--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -917,16 +917,26 @@
     <Compile Include="Business\Label.Model\AccessionLabel.cs" />
     <Compile Include="Business\Label.Model\AccessionLabelQuantity.cs" />
     <Compile Include="Business\Label.Model\AliquotOrderPrinter.cs" />
+    <Compile Include="Business\Label.Model\BlockColorEnum.cs" />
     <Compile Include="Business\Label.Model\BlockLabel.cs" />
     <Compile Include="Business\Label.Model\BlockLabelLegacy.cs" />
     <Compile Include="Business\Label.Model\AliquotLabelPrinter.cs" />
     <Compile Include="Business\Label.Model\BlockLabelPrinter.cs" />
+    <Compile Include="Business\Label.Model\Carousel.cs" />
+    <Compile Include="Business\Label.Model\CarouselColumn.cs" />
     <Compile Include="Business\Label.Model\Cassette.cs" />
     <Compile Include="Business\Label.Model\CassettePrinter.cs" />
+    <Compile Include="Business\Label.Model\CassettePrinterCollection.cs" />
+    <Compile Include="Business\Label.Model\CassettePrinterGrossCody.cs" />
+    <Compile Include="Business\Label.Model\CassettePrinterGrossHobbit.cs" />
+    <Compile Include="Business\Label.Model\CassettePrinterGrossPath.cs" />
+    <Compile Include="Business\Label.Model\CassettePrinterGrossTech.cs" />
     <Compile Include="Business\Label.Model\ContainerPaperLabel.cs" />
     <Compile Include="Business\Label.Model\ContainerPaperLabelPrinter.cs" />
     <Compile Include="Business\Label.Model\AliquotPaperZPLLabel.cs" />
+    <Compile Include="Business\Label.Model\GeneralDataCassette.cs" />
     <Compile Include="Business\Label.Model\HistologySlidePaperZPLLabelV2.cs" />
+    <Compile Include="Business\Label.Model\ThermoFisherCassette.cs" />
     <Compile Include="Business\Label.Model\UrineZPLLabel.cs" />
     <Compile Include="Business\Label.Model\IFEZPLLabel.cs" />
     <Compile Include="Business\Label.Model\FormalinAddedZPLLabel.cs" />
