--- a/YellowstonePathology/packages.config
+++ b/YellowstonePathology/packages.config
@@ -4,6 +4,7 @@
   <package id="Grpc" version="1.1.0" targetFramework="net461" />
   <package id="Grpc.Core" version="1.1.0" targetFramework="net461" />
   <package id="Grpc.Tools" version="1.1.0" targetFramework="net461" />
+  <package id="iTextSharp" version="5.5.13" targetFramework="net461" />
   <package id="LibGit2Sharp.NativeBinaries" version="1.0.129" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net461" />
   <package id="redis-64" version="3.0.501" targetFramework="net461" />
