Move HER2AmplificationSummary to HER2AmplificationByISH, rename groups

--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -1050,14 +1050,14 @@
     <Compile Include="Business\Test\EGFRMutationAnalysisPreliminary\EGFRMutationAnalysisPreliminaryTest.cs" />
     <Compile Include="Business\Test\EGFRToALKReflexAnalysis\EGFRToALKReflexAnalysisBRAFResult.cs" />
     <Compile Include="Business\Test\ExtractAndHoldForPreauthorization\ExtractAndHoldForPreauthorizationWordDocument.cs" />
-    <Compile Include="Business\Test\HER2AmplificationSummary\HER2AmplificationResult.cs" />
-    <Compile Include="Business\Test\HER2AmplificationSummary\HER2AmplificationResultCollection.cs" />
-    <Compile Include="Business\Test\HER2AmplificationSummary\HER2AmplificationResultGroup2.cs" />
-    <Compile Include="Business\Test\HER2AmplificationSummary\HER2AmplificationResultGroup3.cs" />
-    <Compile Include="Business\Test\HER2AmplificationSummary\HER2AmplificationResultGroup4.cs" />
-    <Compile Include="Business\Test\HER2AmplificationSummary\HER2AmplificationResultGroup5.cs" />
-    <Compile Include="Business\Test\HER2AmplificationSummary\HER2AmplificationResultGroup1.cs" />
-    <Compile Include="Business\Test\HER2AmplificationSummary\HER2AmplificationResultEnum.cs" />
+    <Compile Include="Business\Test\HER2AmplificationByISH\HER2AmplificationResult.cs" />
+    <Compile Include="Business\Test\HER2AmplificationByISH\HER2AmplificationResultCollection.cs" />
+    <Compile Include="Business\Test\HER2AmplificationByISH\HER2AmplificationResultGroup2Breast.cs" />
+    <Compile Include="Business\Test\HER2AmplificationByISH\HER2AmplificationResultGroup3Breast.cs" />
+    <Compile Include="Business\Test\HER2AmplificationByISH\HER2AmplificationResultGroup4Breast.cs" />
+    <Compile Include="Business\Test\HER2AmplificationByISH\HER2AmplificationResultGroup5Breast.cs" />
+    <Compile Include="Business\Test\HER2AmplificationByISH\HER2AmplificationResultGroup1Breast.cs" />
+    <Compile Include="Business\Test\HER2AmplificationByISH\HER2AmplificationResultEnum.cs" />
     <Compile Include="Business\Test\HPV1618\HPV1618WPHOBXView.cs" />
     <Compile Include="Business\Test\INI1\INI1Test.cs" />
     <Compile Include="Business\Test\MissingInformation\MissingInformationWordDocument.cs" />
